--- a/main.css
+++ b/main.css
@@ -4,6 +4,41 @@
     box-sizing: border-box;
 }
 body{
-    background-color: rgba(212, 38, 218, 0.674);
-    color:bisque;
+    background-color: rgba(242, 173, 245, 0.684);
+    color: #333;
+}
+header>img{
+    border-radius: 50%;
+    margin-top: 16px;
+    width: 100%;
+    max-width: 300px;
+}
+header{
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+    padding: 16px;
+}
+h3{
+    padding: 20px;
+    font-size: 32px;
+    text-decoration: underline;
+}
+p{
+    padding:8px;
+    font-size: 30px;
+}
+ul{
+    padding: 40px;
+    font-size: 28px;
+}
+#media{
+    display: flex;
+    list-style-type: none;
+    justify-content: space-between;
+    max-width: 900px;
+
+}
+section{
+    padding:0 6.5vw;
 }
