--- a/main.css
+++ b/main.css
@@ -2,18 +2,29 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Roboto Mono", monospace;
+    
 }
 body{
-    background-color: rgba(242, 173, 245, 0.684);
+    background-color: #F5F5EA;
+    background-image: linear-gradient(90deg,#e66465,#9198e5);
     color: #333;
 }
-header>img{
+.header>img{
     border-radius: 50%;
     margin-top: 16px;
     width: 100%;
     max-width: 300px;
 }
+.header h1{
+    margin-top:200px;
+    font-family: "Pacifico", cursive;
+    font-weight: 400;
+    font-style: normal;
+
+}
 header{
+    margin-top: 20px;
     text-align: center;
     font-size: 40px;
     font-weight: bold;
@@ -39,6 +50,57 @@ ul{
     max-width: 900px;
 
 }
+.small_icons{
+    width:100%;
+    max-width: 80px;
+}
 section{
-    padding:0 6.5vw;
+    padding:0 8.5vw;
+}
+.nav_list{
+    display:flex;
+    position: fixed;
+    gap:50px;
+   background-color: #e66465;
+   top: 0;
+   left: 200px;
+   line-height: 30px;
+   font-size: 22px;
+   padding: 4px 8px;
+   width: 100%;
+   max-width: 1024px;
+   justify-content: space-around;  
+   justify-items: center; 
+   border: 1px solid transparent;
+   border-radius: 6px;
+}
+.nav_list__item{
+    list-style-type: none;
+    
+}
+.nav_list__item a{
+    color:#333;
+    text-decoration: none;
+}
+.nav_list__item a:hover{
+    background-color: #9198e5;
+    color:#F5F5EA;
+    border-radius:8px;
+    padding:8px;
+}
+.materials{
+    display: flex;
+    justify-content: space-between;
+}
+.materials>li{
+    list-style-type: none;
+}
+footer{
+    text-align: center;
+    font-size: 20px;
+    padding-bottom: 50px;
+}
+.subtittle{
+    margin: 150px auto;
+    padding-top: 50px;
 }
