--- a/main.css
+++ b/main.css
@@ -21,14 +21,14 @@ body{
     font-family: "Pacifico", cursive;
     font-weight: 400;
     font-style: normal;
+    font-size: 40px;
+    padding: 16px;
+    font-weight: bold;
 
 }
 header{
     margin-top: 20px;
     text-align: center;
-    font-size: 40px;
-    font-weight: bold;
-    padding: 16px;
 }
 h3{
     padding: 20px;
@@ -61,18 +61,18 @@ section{
     display: flex;
     position: fixed;
     gap:50px;
-   background-color: #e66465;
-   top: 0;
-   left: 200px;
-   line-height: 30px;
-   font-size: 22px;
-   padding: 4px 8px;
-   width: 100%;
-   max-width: 1024px;
-   justify-content: space-around;  
-   justify-items: center; 
-   border: 1px solid transparent;
-   border-radius: 6px;
+    background-color: #e66465;
+    top: 0;
+    left: 200px;
+    line-height: 30px;
+    font-size: 22px;
+    padding: 4px 8px;
+    width: 100%;
+    max-width: 1024px;
+    justify-content: space-around;  
+    justify-items: center; 
+    border: 1px solid transparent;
+    border-radius: 6px;
 }
 .nav_list__item{
     list-style-type: none;
@@ -130,18 +130,35 @@ footer{
     .header h1{
         font-size: 40px;
     }
-    .nav-list{
+    .nav_list{
         padding:0;
-        left: 0;
-        max-width:400px;
+        left:30%;
+        max-width:200px;
         font-size: 12px;
         gap:0;
-        flex-direction:column;
+        flex-direction: column;
+        justify-content: center;
+    
 
     }
     .materials{
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 10px;
+    }
+    p{
+        font-size: 16px;
+    }
+    .groups{
+        display:block;
+    }
+    .groups__item{
+        margin-top: 12px;
+    }
+    #media{
+        flex-direction: column;
+    }
+    h3{
+        font-size: 16px;
     }
 }
